# python-dispatchio

./: .gitignore  .mise.toml  .pre-commit-config.yaml  CHANGELOG.md  COOKBOOK.md  LICENSE  README.md  build_cookbook.py  pyproject.toml
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-setup-steps.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cookbook-up-to-date.yml  pre-commit-and-tests.yml  publish.yml  release.yml  trivy-scan.yml
dispatchio/: __init__.py  __main__.py  admission.py  cadence.py  completion.py  conditions.py  contexts.py  date_context.py  decorator.py  events.py  external.py  models.py  orchestrator.py  reporter.py  run_id.py  run_key_resolution.py  run_loop.py  runs.py  simulate.py  tick_log.py
dispatchio/alerts/: __init__.py  base.py
dispatchio/cli/: __init__.py  app.py  ctx.py  errors.py  graph.py  loaders.py  main.py  options.py  output.py  record.py  rename.py  retry.py  root.py  sandbox.py
dispatchio/config/: __init__.py  factory.py  loader.py  settings.py
dispatchio/datastore/: __init__.py  base.py  decorators.py  filesystem.py  memory.py
dispatchio/executor/: __init__.py  base.py  python_.py  subprocess_.py
dispatchio/graph/: __init__.py  loader.py  spec.py
dispatchio/models/: __init__.py  attempt.py  dead_letter.py  enums.py  event.py  job.py  orchestrator.py  registry.py  retry.py
dispatchio/receiver/: __init__.py  base.py  filesystem.py
dispatchio/state/: __init__.py  base.py  filesystem.py  memory.py  sqlalchemy_.py
dispatchio/worker/: __init__.py  harness.py
dispatchio_aws/: __init__.py  config.py
dispatchio_aws/executor/: __init__.py  athena.py  base.py  lambda_.py  stepfunctions.py
dispatchio_aws/receiver/: __init__.py  sqs.py
dispatchio_aws/reporter/: __init__.py  sqs.py
dispatchio_aws/worker/: __init__.py  completion_handler.py  eventbridge_handler.py  lambda_handler.py
docs/: advanced_scheduling.md  aws_extension.md  backfill_and_replay.md  completion_reporting.md  external_events.md  ideas.md  job-namespace-rename.md  job_run_key_rename_impact.md  questions.md  retries_attempts_audit.md  unified-attempts-design.md
docs/ARCHIVE/: aws_extension.md  cli_refactor_rich_plan.md  completion_reporting.md  concurrency_pools_limits_design.md  job_run_key_rename_impact.md  json_graph_decoupling.md  parametrized_runs_and_date_context.md  unified-attempts-design.md
examples/cadence/: run.py  (+4 more)
mise-tasks/: build-cookbook
scripts/: build_cookbook.py
tests/: conftest.py  test_aws_completion_handler.py  test_aws_config.py  test_aws_eventbridge_handler.py  test_aws_executors.py  test_aws_lambda_handler.py  test_aws_sqs_receiver.py  test_aws_sqs_reporter.py  test_cli.py  test_completion.py  test_conditions.py  test_config.py  test_datastore.py  test_date_context.py  test_decorator.py  test_examples.py  test_external.py  test_graph.py  test_models.py  test_orchestrator.py  test_python_executor.py  test_reporter.py  test_run_id.py  test_run_key_resolution.py  test_runs.py  test_state.py  test_worker.py
(+68 files in other folders)
